# huiyu-db-mapper

./: Cargo.toml  ReadMe.md
db-macros/: Cargo.toml
db-macros/src/: lib.rs  lib_bak.rs
db-mapper/: Cargo.toml  ReadMe.md
db-mapper/src/: lib.rs  main.rs
db-mapper/src/base/: config.rs  db_type.rs  entity.rs  error.rs  manager.rs  mod.rs  page.rs  param.rs
db-mapper/src/db/: mod.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  sqlserver.rs
db-mapper/src/db/mysql/: mysql_executor.rs  mysql_executor_tx.rs  mysql_sql_generator.rs
db-mapper/src/db/oracle/: oracle_sql_generator.rs
db-mapper/src/db/postgres/: postgres_executor.rs  postgres_register.rs  postgres_sql_generator.rs
db-mapper/src/db/sqlite/: sqlite_executor.rs  sqlite_executor_tx.rs  sqlite_register.rs  sqlite_sql_generator.rs
db-mapper/src/db/sqlserver/: sqlserver_sql_generator.rs
db-mapper/src/pool/: datasource.rs  db_manager.rs  mod.rs  transactional.rs  tx_manager.rs
db-mapper/src/query/: base_mapper.rs  base_mapper_tx.rs  mod.rs  query.rs  query_wrapper.rs
db-mapper/src/sql/: executor.rs  executor_tx.rs  generator.rs  mod.rs  pool.rs  sql_generator.rs  sql_util.rs
db-mapper/src/sql/executor/: executor.rs  mysql_executor.rs  sqlite_executor.rs
db-mapper/src/sql/generator/: mysql_sql_generator.rs  oracle_sql_generator.rs  postgres_sql_generator.rs  sql_generator.rs  sqlite_sql_generator.rs  sqlserver_sql_generator.rs
db-mapper/src/sql/pool/: datasource.rs  db_manager.rs  transaction.rs  transaction1.rs  transactional.rs  tx_manager.rs
example/: Cargo.toml
example/src/: app_test.rs  main.rs  mapper.rs  mapper_test.rs  student_test.rs  transaction_test.rs  user_mapper.rs
huiyu-db-macros/: Cargo.toml
huiyu-db-macros/src/: lib.rs
huiyu-db-mapper/: Cargo.toml
huiyu-db-mapper-core/: Cargo.toml
huiyu-db-mapper-core/src/: lib.rs
huiyu-db-mapper-core/src/base/: config.rs  db_type.rs  entity.rs  error.rs  mapping.rs  mod.rs  page.rs  param.rs
huiyu-db-mapper-core/src/pool/: datasource.rs  db_manager.rs  mod.rs  transactional.rs
huiyu-db-mapper-core/src/query/: mod.rs  query.rs  query_wrapper.rs
huiyu-db-mapper-core/src/sql/: executor.rs  mod.rs  sql_generator.rs  transactional.rs
huiyu-db-mapper-core/src/util/: time_util.rs
huiyu-db-mapper-example/: Cargo.toml
huiyu-db-mapper-example/src/common/: db.rs  mod.rs  result.rs
huiyu-db-mapper-example/src/controller/: mod.rs  role_controller.rs  user_controller.rs
huiyu-db-mapper-example/src/entity/: entities.rs  mappings.rs  mod.rs
huiyu-db-mapper-example/src/mapper/: mappers.rs
huiyu-db-mapper-example/src/test/: mod.rs  query_wrapper_test.rs  sql_generate_test.rs  sqlite_test.rs  test.rs
huiyu-db-mapper-impl/: Cargo.toml
huiyu-db-mapper-impl/src/: lib.rs
huiyu-db-mapper-impl/src/exec/: mod.rs  sql_util.rs
huiyu-db-mapper-impl/src/query/: base_mapper.rs  db_type_wrapper.rs  execute_impl.rs  query_wrapper_occupy.rs  select_impl.rs
huiyu-db-mapper-macros/: Cargo.toml
huiyu-db-mapper-macros/src/: lib.rs
huiyu-db-mapper-mysql/: Cargo.toml
huiyu-db-mapper-mysql/src/: lib.rs
huiyu-db-mapper-mysql/src/mysql/: mod.rs  mysql_executor.rs  mysql_register.rs  mysql_sql_generator.rs
huiyu-db-mapper-oracle/: Cargo.toml
huiyu-db-mapper-oracle/src/oracle/: mod.rs  oracle_executor.rs  oracle_register.rs  oracle_sql_generator.rs
huiyu-db-mapper-postgres/: Cargo.toml  ReadMe.md
huiyu-db-mapper-postgres/src/postgres/: postgres_executor.rs  postgres_register.rs  postgres_sql_generator.rs
huiyu-db-mapper-sqlite/: Cargo.toml
huiyu-db-mapper-sqlite/src/sqlite/: mod.rs  sqlite_executor.rs  sqlite_register.rs  sqlite_sql_generator.rs
huiyu-db-mapper/src/: lib.rs
huiyu-db-mapper/src/query/: base_mapper.rs  db_type.rs  db_type_wrapper.rs  execute_impl.rs  mod.rs  query_wrapper_occupy.rs  select_impl.rs  transactional.rs
huiyu-db-util/: Cargo.toml
huiyu-db-util-example/: Cargo.toml
huiyu-db-util-example/resources/: sqlite.sql
huiyu-db-util-example/src/: app_test.rs  datasource_test.rs  entities.rs  main.rs  mapper.rs  mappers.rs  muti_test.rs  mysql_test.rs  postgres_test.rs  sqlite_test.rs  student_test.rs
huiyu-db-util-example/src/common/: db.rs  result.rs
huiyu-db-util-example/src/controller/: role_controller.rs  user_controller.rs
huiyu-db-util-example/src/entity/: entities.rs  mappings.rs  mod.rs
huiyu-db-util-example/src/mapper/: mappers.rs  mod.rs
huiyu-db-util-example/src/param/: mod.rs  param.rs
huiyu-db-util-example/src/test/: datasource_test.rs  mod.rs  muti_test.rs  query_wrapper_test.rs  sql_generate_test.rs  sqlite_test.rs
huiyu-db-util/src/: lib.rs
