[workspace]
name = "huiyu-db-util"
version = "0.1.0"
edition = "2024"
members = ["huiyu-db-macros", "huiyu-db-mapper-core", "huiyu-db-mapper-postgres", "huiyu-db-mapper-sqlite", "huiyu-db-mapper", "huiyu-db-util", "huiyu-db-util-example", "huiyu-db-mapper-mysql", "huiyu-db-mapper-oracle"]

[workspace.dependencies]

chrono = { version = "0.4.42",features = ["serde"] }
lazy_static = "1.5.0"
tracing = "0.1.44"
thiserror = "2.0.17"
uuid = { version = "1.18.1",features = ["v4"] }
tokio = { version = "1.49.0" ,features = ["full"]}
deadpool = "=0.13.0"
deadpool-sync = "=0.2.0"
dashmap = "6.1.0"
parking_lot = "0.12.5"

#### proc-macro
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106",features = ["full", "extra-traits", "parsing", "derive"] }

#### postgresql
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.16"

### sqlite
deadpool-sqlite = "0.13.0"
rusqlite = { version = "0.38" ,features = ["bundled"] }
