[package]
name = "db-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
db-macros = {path = "../db-macros"}

chrono = { workspace = true }
rustlog = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
deadpool = { workspace = true }
deadpool-sync = {workspace = true}

### postgres
tokio-postgres = {workspace = true}
deadpool-postgres = { workspace = true }

### sqlite
deadpool-sqlite = { workspace = true }
rusqlite = { workspace = true }
dashmap = "6.1.0"
