[package]
name = "db-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
db-macros = {path = "../db-macros"}

chrono = { workspace = true }
rustlog = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
deadpool = { workspace = true }
deadpool-sync = {workspace = true}
dashmap = {workspace = true }

### postgres
tokio-postgres = {workspace = true, optional = true}
deadpool-postgres = { workspace = true, optional = true}

### sqlite
deadpool-sqlite = { workspace = true, optional = true}
rusqlite = { workspace = true , optional = true}

[features]
default = ["sqlite"]
postgres = ["tokio-postgres", "deadpool-postgres"]
sqlite = ["deadpool-sqlite", "rusqlite"]



