[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
db-macros = {path = "../db-macros"}
db-mapper = {path = "../db-mapper"}
rusqlite = {workspace = true}

chrono = "0.4.42"
lazy_static = "1.5.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0" ,features = ["full"]}
uuid = { version = "1.18.1",features = ["v4"] }
rustlog = "0.3.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
deadpool = "0.13.0"
deadpool-sqlite = "0.13.0"
