[package]
name = "huiyu-db-macros"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
