[package]
name = "huiyu-db-mapper-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
tracing = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
lazy_static = {workspace = true}
dashmap = {workspace = true }
parking_lot = {workspace = true }

