[package]
name = "huiyu-db-mapper-core"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}


[dependencies]
chrono = { workspace = true }
tracing = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
lazy_static = {workspace = true}
dashmap = {workspace = true }
serde = { workspace = true }

