[package]
name = "huiyu-db-mapper-example"
version = {workspace = true}
edition = {workspace = true}

[dependencies]
huiyu-db-mapper={workspace = true, features = ["postgres", "sqlite", "mysql","oracle"]}

chrono = { workspace = true }
tracing = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
deadpool = { workspace = true }
deadpool-sync = {workspace = true}
dashmap = {workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = "1.41.0"

## sqlite
deadpool-sqlite = { workspace = true}
rusqlite = { workspace = true}
### postgres
tokio-postgres = {workspace = true}
deadpool-postgres = { workspace = true}


serde_json = "1.0.149"
actix-web = "4.13.0"
tracing-subscriber = "0.3.23"
