[package]
name = "huiyu-db-mapper-mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
huiyu-db-mapper-core = { path = "../huiyu-db-mapper-core" }
tokio = { version = "1.49.0" ,features = ["full"]}
chrono = {workspace = true}
tracing = {workspace = true}
parking_lot = {workspace = true}

mysql = "27.0.0"
