[package]
name = "huiyu-db-mapper-mysql"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[dependencies]
huiyu-db-mapper-core = { workspace = true }
tokio = { workspace = true}
chrono = {workspace = true}
tracing = {workspace = true}
mysql = { workspace = true }
