[package]
name = "huiyu-db-mapper-oracle"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[dependencies]
huiyu-db-mapper-core = { workspace = true }
tokio = { workspace = true}
chrono = {workspace = true}
tracing = {workspace = true}
deadpool-oracle.workspace = true
oracle-rs = "0.1.5"
#deadpool-oracle = "0.1.1"
#oracle-rs = "0.1"
