[package]
name = "huiyu-db-mapper-postgres"
version = "0.1.0"
edition = "2024"
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[dependencies]
huiyu-db-mapper-core = {workspace = true}
tokio = { workspace = true}
deadpool = { workspace = true }
deadpool-sync = { workspace = true }
chrono = {workspace = true}
parking_lot = {workspace = true}

### postgres
tokio-postgres = {workspace = true}
deadpool-postgres = { workspace = true}
postgres-types = { workspace = true }