[package]
name = "huiyu-db-mapper-postgres"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[dependencies]
huiyu-db-mapper-core = {workspace = true}
tokio = { workspace = true}
deadpool = { workspace = true }
deadpool-sync = { workspace = true }
chrono = {workspace = true}
tracing = {workspace = true}

### postgres
tokio-postgres = {workspace = true}
deadpool-postgres = { workspace = true}
postgres-types = { workspace = true }
rust_decimal = {workspace = true, features = ["db-tokio-postgres"]}