[package]
name = "huiyu-db-mapper-sqlite"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}


[dependencies]
huiyu-db-mapper-core = { workspace = true}
tracing = {workspace = true}
### sqlite
deadpool-sqlite = { workspace = true}
rusqlite = { workspace = true}
tokio = {workspace = true}
