[package]
name = "huiyu-db-mapper"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
build = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = {workspace = true}
readme = {workspace = true}
keywords = {workspace = true}
license = { workspace = true }
repository = {workspace = true}

[dependencies]
huiyu-db-mapper-core={workspace = true}
huiyu-db-mapper-postgres={workspace = true,optional = true}
huiyu-db-mapper-sqlite={workspace = true, optional = true}
huiyu-db-mapper-mysql={workspace = true, optional = true}
huiyu-db-mapper-oracle={workspace = true, optional = true}

tracing = {workspace = true}
uuid = {workspace = true}
tokio = { workspace = true }


[features]
default = ["sqlite"]
postgres = ["huiyu-db-mapper-postgres"]
sqlite = ["huiyu-db-mapper-sqlite"]
mysql = ["huiyu-db-mapper-mysql"]
oracle = ["huiyu-db-mapper-oracle"]
