[package]
name = "huiyu-db-util-example"
version = "0.1.0"
edition = "2024"

[dependencies]
huiyu-db-util={path = "../huiyu-db-util", features = ["postgres", "sqlite", "mysql"]}

chrono = { workspace = true }
tracing = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
deadpool = { workspace = true }
deadpool-sync = {workspace = true}
dashmap = {workspace = true }
serde = { version = "1.0.228", features = ["derive"] }


## sqlite
deadpool-sqlite = { workspace = true}
rusqlite = { workspace = true}
### postgres
tokio-postgres = {workspace = true}
deadpool-postgres = { workspace = true}


serde_json = "1.0.149"
