[package]
name = "huiyu-db-util"
version = "0.1.0"
edition = "2024"

[dependencies]
huiyu-db-macros={workspace = true}
huiyu-db-mapper-core={workspace = true}
huiyu-db-mapper = {workspace = true}
huiyu-db-mapper-postgres={workspace = true, optional = true}
huiyu-db-mapper-sqlite={workspace = true, optional = true}
huiyu-db-mapper-mysql={workspace = true, optional = true}


[features]
default = ["sqlite"]
postgres = ["huiyu-db-mapper-postgres", "huiyu-db-mapper/postgres"]
sqlite = ["huiyu-db-mapper-sqlite", "huiyu-db-mapper/sqlite"]
mysql = ["huiyu-db-mapper-mysql", "huiyu-db-mapper/mysql"]

